@@ -20,6 +20,7 @@
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
           <argLine>--add-opens=java.base/jdk.internal.platform=ALL-UNNAMED
+            --add-opens=java.base/jdk.internal.platform.cgroupv1=ALL-UNNAMED
             --add-opens=java.base/jdk.internal.platform.cgroupv2=ALL-UNNAMED
             --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
